fix: temporary overflow x fix

--- a/assets/scss/layouts/_body.scss
+++ b/assets/scss/layouts/_body.scss
@@ -1,5 +1,7 @@
 html {
   scroll-behavior: smooth;
+  // temporary
+  overflow-x: hidden;
 }
 body,
 * {
@@ -8,6 +10,8 @@ body,
 body {
   margin-bottom: -20px;
   background-color: white;
+  // temporary
+  overflow-x: hidden;
 }
 
 .content-container {
